--- a/info.html
+++ b/info.html
@@ -280,7 +280,7 @@
             </div>
       <div class="from" style="background-color: #fff3e0;">
     <p>정보 출처</p><br>
-    <p>농림축산식품부 "2023년 동물복지에 대한 국민 의식 조사" 2024.01.16. </p>
+    <p>농림축산식품부, 『2023년 동물복지에 대한 국민의식조사』, 2023.</p>
     <p>ROYAL CANIN https://www.royalcanin.com/kr</p>
     <p>수의사 설채현 공식 유튜브 "강아지 입양시 챙겨야 할 11가지 준비물! (크레이트, 육각장, 베이비게이트 등등)" https://youtu.be/bl4yx6Hkcvc?si=YYodo2_yiNZNMd8T</p>
     <p>비엔동물전문의료센터 공식 유튜브 "😺고양이 입양 전 필수 준비물!, 입양 첫 날 꼭 지켜야 할 것" https://youtu.be/JtiwVQot6sk?si=siDlZmD7ZOzgGesj</p>
