--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <header>
     <h1><a href="index.html">Pet in Pocket</a></h1>
     <div class="auth">
-      <a href="#">로그인</a>
+      <a href="login.html">로그인</a>
       <a href="#">회원가입</a>
     </div>
   </header>
