--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <h1><a href="index.html">Pet in Pocket</a></h1>
     <div class="auth">
       <a href="login.html">로그인</a>
-      <a href="#">회원가입</a>
+      <a href="signup.html">회원가입</a>
     </div>
   </header>
   
