--- a/adopt.html
+++ b/adopt.html
@@ -6,9 +6,7 @@
   <title>보호소 입양 - 펫인포켓</title>
   <link rel="stylesheet" href="adopt.css" />
   <link href="https://fonts.googleapis.com/css2?family=Gowun+Dodum&display=swap" rel="stylesheet" />
-  
-  <!-- ✅ jQuery CDN -->
-  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+  <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script> <!-- ✅ jQuery CDN 추가 -->
 </head>
 <body>
   <header>
@@ -39,7 +37,6 @@
     <div id="card-list" class="card-list"></div>
   </main>
 
-  <!-- ✅ jQuery 기반 adopt.js -->
-  <script src="adopt_jquery.js"></script>
+  <script src="adopt.js"></script>
 </body>
 </html>
