--- a/share.html
+++ b/share.html
@@ -88,6 +88,11 @@
   document.getElementById("share-btn").addEventListener("click", () => {
     document.getElementById("upload-modal").classList.remove("hidden");
   });
+  
+  document.querySelector(".close-btn").addEventListener("click", () => {
+    document.getElementById("upload-modal").classList.add("hidden");
+  });
+
 </script>
 
 
